# llvm-loop-perforation

./: .gitignore  CMakeLists.txt  Makefile  driver.py  plot-all.sh  plot.sh  plots.py  run_exhaustive.sh  run_greedy.sh
benchmarks/blackscholes/: blackscholes.c
benchmarks/sobel/: error.py
loop-perf/: LoopPerforation.cpp
